--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_text_info">Info</string>
     <string name="menu_text_settings">Settings</string>
     <string name="menu_text_chart">Chart</string>
+    <string name="settings_toast">Settings are not ready yet, please check it out later!</string>
 </resources>
