Retrofit APIs 1. Besides Binance 2 more Retrofit modules added: CoinMarketCap and CoinPaprika. Both provide main info about crypto coins and contracts. CMC API requires API key, CoinPaprika free API works without a key. Both are now in free mode and have limited functionality. 2. Main fragment now shows a list of 10 gainers and losers for the last 24 hours (from CoinPaprika API). Gainers have dark green background, losers - dark red. 3. Clicking on a coin in the list a detailed info about the coin is opened (InfoFragment). 4. Added ChartFragment that shows actual market situation of the coin. Added chart but it doesn't work yet. To resolve later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="menu_text_settings">Settings</string>
     <string name="menu_text_chart">Chart</string>
     <string name="settings_toast">Settings are not ready yet, please check it out later!</string>
+    <string name="tags">Tags:</string>
+    <string name="links">Links:</string>
+    <string name="team">Team:</string>
+    <string name="menu_text_search">Search</string>
 </resources>
