--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="links">Links:</string>
     <string name="team">Team:</string>
     <string name="menu_text_search">Search</string>
+    <string name="main_info">Main info:</string>
 </resources>
