--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="main_info">Main info:</string>
     <string name="double_tap_toast">Please press back twice to exit the app</string>
     <string name="favorite">Add to Favorite</string>
+    <string name="menu_text_chat">Ai chat</string>
 </resources>
