Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,8 @@
     <string name="symbol">Symbol</string>
     <string name="name">Name</string>
     <string name="price">Price</string>
-    <string name="change_24h">%24hr</string>
+    <string name="change_24h">%</string>
     <string name="volume">Volume</string>
     <string name="mcap">MCap</string>
+    <string name="add_to_portfolio">Add to portfolio</string>
 </resources>
