Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,11 @@
     <string name="volume">Volume</string>
     <string name="mcap">MCap</string>
     <string name="add_to_portfolio">Add to portfolio</string>
+    <string name="settings">Settings</string>
+    <string name="coins_filters">Coins filters</string>
+    <string name="min_mcap">Min MCap</string>
+    <string name="minimum_market_cap">Minimum market cap</string>
+    <string name="min_volume">Min Volume</string>
+    <string name="minimum_daily_volume">Minimum daily volume</string>
+    <string name="top_coins">Top coins</string>
 </resources>
