Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP. 5. AI reports fragment reworked. Now different reports is opened in it's own collapsible card. 6. Added TokenMetricsApi methods to get more AI info.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="min_volume">Min Volume</string>
     <string name="minimum_daily_volume">Minimum daily volume</string>
     <string name="top_coins">Top coins</string>
+    <string name="no_report_found">No report found</string>
 </resources>
