Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP. 5. AI reports fragment reworked. Now different reports is opened in it's own collapsible card. 6. Added TokenMetricsApi methods to get more AI info. 7. Added notifications when one of favorites moves more than established by the user. 8. In settings user can indicate if he wants to receive notifications and min price change for it. 9. Notification manager added. 10. Notification permissions checked and asked for when the checkbox is enabled in settings. 11. WorkManager starts a periodic work to get price info from API and check favorites price changes. 12. Atm price check period is 15 min for testing purposes, in real app should be set to 24hr.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
     <string name="double_tap_toast">Please press back twice to exit the app</string>
     <string name="favorite">Add to Favorite</string>
     <string name="menu_text_chat">Ai chat</string>
-    <string name="http429">Too many requests performed, please try again after some time</string>
-    <string name="http400">Sorry, I can\'t find any reasonable response to your question</string>
-    <string name="http500">I\'m experiencing some technical difficulties right now, please come back a bit later</string>
+    <string name="http429">Too many requests performed, please try again after some time.</string>
+    <string name="http400">Sorry, I can\'t find any reasonable response to your question.</string>
+    <string name="http500">Sorry, I don\'t have a response to such a question or maybe I\'m just experiencing some technical difficulties right now. Please reformulate your question or come back later.</string>
     <string name="unknown_http_error">Unknown Http error</string>
     <string name="fundamental_report">FUNDAMENTAL REPORT</string>
     <string name="trader_report">TRADER REPORT</string>
@@ -57,4 +57,8 @@
     <string name="minimum_daily_volume">Minimum daily volume</string>
     <string name="top_coins">Top coins</string>
     <string name="no_report_found">No report found</string>
+    <string name="favorites_notification">Favorite coins notifications</string>
+    <string name="favorite_change_text">I want to receive notifications if market price of one of my favorites changes more than:</string>
+    <string name="minimum_favorite_price_change">Minimum favorite coin price change</string>
+    <string name="favorite_coin_price_change">Favorite coin price change</string>
 </resources>
