Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP. 5. AI reports fragment reworked. Now different reports is opened in it's own collapsible card. 6. Added TokenMetricsApi methods to get more AI info. 7. Added notifications when one of favorites moves more than established by the user. 8. In settings user can indicate if he wants to receive notifications and min price change for it. 9. Notification manager added. 10. Notification permissions checked and asked for when the checkbox is enabled in settings. 11. WorkManager starts a periodic work to get price info from API and check favorites price changes. 12. Atm price check period is 15 min for testing purposes, in real app should be set to 24hr. 13. Arrows added to headers in SearchFragment to indicate current sorting. 14. Search added to SearchFragment. 1 seconds debounce, searches by coin symbol and name. 15. Search sorting is now saved to preferences. 16. Portfolio added to db. Now user can open both long and short virtual positions on coins. 17. On Coin Info fragment Portfolio FAB added. On click AlertDialog is shown where user can input number of coins to buy/sell. 18. PortfolioFragment added to Favorite ViewPager. Total value. P/L and positions are shown.
!!! ToDo: Change position.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,10 @@
     <string name="favorite_change_text">I want to receive notifications if market price of one of my favorites changes more than:</string>
     <string name="minimum_favorite_price_change">Minimum favorite coin price change</string>
     <string name="favorite_coin_price_change">Favorite coin price change</string>
+    <string name="open_position_text">Please enter a positive number if you want to open a long position or negative number for short position.</string>
+    <string name="enter_a_number">Enter a number</string>
+    <string name="portfolio_operation">Portfolio operation</string>
+    <string name="no_quantity_entered_the_position_isn_t_saved">No quantity entered, the position isn\'t saved.</string>
+    <string name="saved_coins">Saved coins</string>
+    <string name="logo">Logo</string>
 </resources>
