--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,10 +61,20 @@
     <string name="favorite_change_text">I want to receive notifications if market price of one of my favorites changes more than:</string>
     <string name="minimum_favorite_price_change">Minimum favorite coin price change</string>
     <string name="favorite_coin_price_change">Favorite coin price change</string>
-    <string name="open_position_text">Please enter a positive number if you want to open a long position or negative number for short position.</string>
-    <string name="enter_a_number">Enter a number</string>
+    <string name="open_position_text">Enter a positive number if you want to open a long position or negative number for short position.</string>
+    <string name="qty_hint">Quantity</string>
     <string name="portfolio_operation">Portfolio operation</string>
     <string name="no_quantity_entered_the_position_isn_t_saved">No quantity entered, the position isn\'t saved.</string>
     <string name="saved_coins">Saved coins</string>
     <string name="logo">Logo</string>
+    <string name="news_summary">News summary</string>
+    <string name="reddit_summary">Reddit summary</string>
+    <string name="twitter_summary">Twitter summary</string>
+    <string name="position_created">Position created</string>
+    <string name="change_position_text">Enter the new quantity to change the position or 0 to close it:</string>
+    <string name="position_closed_text">Position closed, P/L = </string>
+    <string name="ok">Ok</string>
+    <string name="price_not_found">Price hasn\'t been found for symbol: </string>
+    <string name="position_not_changed">The position has not been changed</string>
+    <string name="position_changed_text">"Position ha been changed, new quantity: "</string>
 </resources>
