Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP. 5. AI reports fragment reworked. Now different reports is opened in it's own collapsible card. 6. Added TokenMetricsApi methods to get more AI info. 7. Added notifications when one of favorites moves more than established by the user. 8. In settings user can indicate if he wants to receive notifications and min price change for it. 9. Notification manager added. 10. Notification permissions checked and asked for when the checkbox is enabled in settings. 11. WorkManager starts a periodic work to get price info from API and check favorites price changes. 12. Atm price check period is 15 min for testing purposes, in real app should be set to 24hr. 13. Arrows added to headers in SearchFragment to indicate current sorting. 14. Search added to SearchFragment. 1 seconds debounce, searches by coin symbol and name. 15. Search sorting is now saved to preferences. 16. Portfolio added to db. Now user can open both long and short virtual positions on coins. 17. On Coin Info fragment Portfolio FAB added. On click AlertDialog is shown where user can input number of coins to buy/sell. 18. PortfolioFragment added to Favorite ViewPager. Total value, P/L and positions are shown. 19. Now if the coin is already in portfolio user can change or close the position. 20. Caching added. Cache data is saved to internal storage. Now it's on for TM Sentiments as it's updated hourly and consists of only 1 object with text. 21. Added Binance OHLC chart selecting reference asset and interval.
TODO! styling.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="price_not_found">Price hasn\'t been found for symbol: </string>
     <string name="position_not_changed">The position has not been changed</string>
     <string name="position_changed_text">"Position ha been changed, new quantity: "</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
