Portfolio evaluation 1. Implemented: periodically started service that calculates portfolio valuation at the end of the previous day. 2. Added to settings fragment: Selector at what time user wants (if so) to receive daily notification about portfolio state. 3. SharedPreferences were switched to Kotlin delegates scheme. 4. InfoFragment tags & links switched to FlexBox, icons added to known links types. 5. Link Stat added 6. Ai chat switched to RecyclerView with 2 types of ViewHolders: for in and out messages. 7. Added Firebase Crashlytics and Performance Monitor. 8. View - ViewModel relations cleaned for all fragments and MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,10 @@
     <string name="portfolio_service_description">CryptoView background service for portfolio evaluation</string>
     <string name="get_portfolio_notification_text">I want to receive the state of my portfolio every day at</string>
     <string name="portfolio_notification">Portfolio notifications</string>
+    <string name="gemini">Gemini</string>
+    <string name="error">Error</string>
+    <string name="something_went_wrong_tm_answer">Something went wrong, TM answer: %1$s</string>
+    <string name="empty_ai_response">And the silence was his only answer...</string>
+    <string name="lets_ask_gemini">I have no answer to the question. Let\'s ask Gemini...</string>
+    <string name="copied_to_clipboard">Message copied to clipboard</string>
 </resources>
