Portfolio evaluation 1. Implemented: periodically started service that calculates portfolio valuation at the end of the previous day. 2. Added to settings fragment: Selector at what time user wants (if so) to receive daily notification about portfolio state. 3. SharedPreferences were switched to Kotlin delegates scheme. 4. InfoFragment tags & links switched to FlexBox, icons added to known links types. 5. Link Stat added 6. Ai chat switched to RecyclerView with 2 types of ViewHolders: for in and out messages. 7. Added Firebase Crashlytics and Performance Monitor. 8. View - ViewModel relations cleaned for all fragments and MainActivity. 9. TechIndicators are now uniform, extend TechInd abstract class. Tech indicators switchers are in the Flexbox. 10. Notification service reworked, NotificationData implemented to construct notifications. 11. AlarmScheduler implemented to schedule different actions (program start services, BroadcastReceivers etc.) AlarmData is used to set alarms. 12. Links icons tweaked a bit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,6 @@
     <string name="change_24h">%24h</string>
     <string name="value">Value</string>
     <string name="portfolio_service_description">CryptoView background service for portfolio evaluation</string>
-    <string name="get_portfolio_notification_text">I want to receive the state of my portfolio every day at</string>
     <string name="portfolio_notification">Portfolio notifications</string>
     <string name="gemini">Gemini</string>
     <string name="error">Error</string>
@@ -105,4 +104,6 @@
     <string name="empty_ai_response">And the silence was his only answer...</string>
     <string name="lets_ask_gemini">I have no answer to the question. Let\'s ask Gemini...</string>
     <string name="copied_to_clipboard">Message copied to clipboard</string>
+    <string name="portfolio_no_notify">I don\'t want to be notified about the state of my portfolio</string>
+    <string name="portfolio_notify">I want to be notified about the state of the portfolio every day at %1$s</string>
 </resources>
