--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="menu_text_info">Info</string>
     <string name="menu_text_settings">Settings</string>
     <string name="menu_text_chart">Chart</string>
-    <string name="settings_toast">Settings are not ready yet, please check it out later!</string>
     <string name="tags">Tags:</string>
     <string name="links">Links:</string>
     <string name="team">Team:</string>
@@ -77,8 +76,6 @@
     <string name="price_not_found">Price hasn\'t been found for symbol: </string>
     <string name="position_not_changed">The position has not been changed</string>
     <string name="position_changed_text">"Position ha been changed, new quantity: "</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="tokenmetrics_summary">TokenMetrics summary</string>
     <string name="market_sentiment_grade">Market sentiment grade:</string>
     <string name="news_sentiment_grade">News sentiment grade:</string>
@@ -101,8 +98,8 @@
     <string name="gemini">Gemini</string>
     <string name="error">Error</string>
     <string name="something_went_wrong_tm_answer">Something went wrong, TM answer: %1$s</string>
-    <string name="empty_ai_response">And the silence was his only answer...</string>
-    <string name="lets_ask_gemini">I have no answer to the question. Let\'s ask Gemini...</string>
+    <string name="empty_ai_response">And the silence was his only answer…</string>
+    <string name="lets_ask_gemini">I have no answer to the question. Let\'s ask Gemini…</string>
     <string name="copied_to_clipboard">Message copied to clipboard</string>
     <string name="portfolio_no_notify">I don\'t want to be notified about the state of my portfolio</string>
     <string name="portfolio_notify">I want to be notified about the state of the portfolio every day at %1$s</string>
