--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="favorite_change_text">I want to receive notifications if market price of one of my favorites changes more than:</string>
     <string name="minimum_favorite_price_change">Minimum favorite coin price change</string>
     <string name="favorite_coin_price_change">Favorite coin price change</string>
-    <string name="open_position_text">Enter a positive number if you want to open a long position or negative number for short position.</string>
+    <string name="open_position_text">Enter a positive quantity of coins if you want to open a long position or negative quantity for short position.</string>
     <string name="qty_hint">Quantity</string>
     <string name="portfolio_operation">Portfolio operation</string>
     <string name="no_quantity_entered_the_position_isn_t_saved">No quantity entered, the position isn\'t saved.</string>
@@ -70,7 +70,7 @@
     <string name="reddit_summary">Reddit summary</string>
     <string name="twitter_summary">Twitter summary</string>
     <string name="position_created">Position created</string>
-    <string name="change_position_text">Enter the new quantity to change the position or 0 to close it:</string>
+    <string name="change_position_text">Enter the new coin quantity to change the position or press \"Close\" to close the position:</string>
     <string name="position_closed_text">Position closed, P/L = </string>
     <string name="ok">Ok</string>
     <string name="price_not_found">Price hasn\'t been found for symbol: </string>
