Portfolio evaluation 1. Implemented: periodically started service that calculates portfolio valuation at the end of the previous day. 2. Added to settings fragment: Selector at what time user wants (if so) to receive daily notification about portfolio state. 3. SharedPreferences were switched to Kotlin delegates scheme. 4. InfoFragment tags & links switched to FlexBox, icons added to known links types. 5. Link Stat added 6. Ai chat switched to RecyclerView with 2 types of ViewHolders: for in and out messages. 7. Added Firebase Crashlytics and Performance Monitor. 8. View - ViewModel relations cleaned for all fragments and MainActivity. 9. TechIndicators are now uniform, extend TechInd abstract class. Tech indicators switchers are in the Flexbox. 10. Notification service reworked, NotificationData implemented to construct notifications. 11. AlarmScheduler implemented to schedule different actions (program start services, BroadcastReceivers etc.) AlarmData is used to set alarms. 12. Links icons tweaked a bit. 13. Cleanup 14. Implemented calculation of portfolio daily change/percent change/cumulative after evaluation. 15. Binance fragment tweaked. Volume added. 16. Ai Report fragment reworked following the changes in TokenMetrics API 17. Dialog views tweaked 18. On MainFragment Crypto market cap bar chart added.
!!! Glitch! after showing Binance chart mcap chart throws an exception. Remedy not found.

19. crypto market cap data caches to internal storage.
20. PortfolioPerformanceFragment added which calculates and shows portfolio effectiveness.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,23 @@
     <string name="copied_to_clipboard">Message copied to clipboard</string>
     <string name="portfolio_no_notify">I don\'t want to be notified about the state of my portfolio</string>
     <string name="portfolio_notify">I want to be notified about the state of the portfolio every day at %1$s</string>
+    <string name="portfolio">Portfolio</string>
+    <string name="value_colon">Value:</string>
+    <string name="total_p_l">Total P/L:</string>
+    <string name="daily_p_l">Daily P/L:</string>
+    <string name="portfolio_performance">Performance</string>
+    <string name="portfolio_performance_evaluation">Portfolio performance evaluation</string>
+    <string name="last_valuation">Last valuation:</string>
+    <string name="unrealised_pnl">Unrealized P/L:</string>
+    <string name="realised_pnl">Realized P/L:</string>
+    <string name="num_positions">Number of positions:</string>
+    <string name="date">Date:</string>
+    <string name="as_of">As of</string>
+    <string name="total_inflow">Total inflow</string>
+    <string name="total_outflow">Total outflow</string>
+    <string name="effective_return">Effective return</string>
+    <string name="inception_date">Inception date</string>
+    <string name="annualized_return">Annualized return</string>
+    <string name="flow_balance">Flow balance</string>
+    <string name="valuation">Valuation:</string>
 </resources>
